test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-borrowed-from-oknil-owned.good
init-field-arg-nonnil-borrowed-from-oknil-owned.chpl:9: In initializer:
init-field-arg-nonnil-borrowed-from-oknil-owned.chpl:10: error: cannot initialize field MyRecord.lhs of non-nilable type 'borrowed MyClass' from a nilable 'owned MyClass?'
  init-field-arg-nonnil-borrowed-from-oknil-owned.chpl:14: called as MyRecord.init(rhs: owned MyClass?)
